objects/XML_Payload__c.object
<CustomObject>
    <fields>
        <fullName>CRM_XML_Response__c</fullName>
        <description>Store the entire XML Response from CRM</description>
        <label>CRM XML Response</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSP_Payload__c</fullName>
        <label>DSP Payload</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Routing_Response__c</fullName>
        <description>XML Payload from CRM</description>
        <label>CRM XML Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>XML Payloads</relationshipLabel>
        <relationshipName>XML_Payloads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipient_Response_Sequence__c</fullName>
        <description>How many Opportunity sent to CRM and Urban Science</description>
        <label>Recipient Response Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_Status__c</fullName>
        <description>Response from CRM and Urban Science</description>
        <label>Recipient Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <description>Whether sent to CRM or Urban Science</description>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Urban Science</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_DSP__c</fullName>
        <label>Response DSP</label>
        <length>70000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XML_Payload__c</fullName>
        <description>This field receives the XML Payload that is being sent during the Routing Acknowledgement process</description>
        <label>XML Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>XML Payload</label>
    <nameField>
        <label>XML Payload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XML Payloads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>